v0.14
	* FIX : Avoid infinite loop with imbricated relations
	* CHG : Remove api 0.5 option
	* ADD : Alternative way of drawing tracks
	* FIX : Don't fail importing lower-cased filenames
    * ADD : Select a relation member by contextual menu
    * CHG : Do not select a relation member when doing a "Center..."
    * ADD : Clicking on a relation member highlights it
	* ADD : Add a Features dock displaying the features in the current viewport
    * ADD : Add a case-sensitiveness option to the search + search by ID (closes #1509)
    * CHG : Remove support for osmarender (fixes #1966)
    * ADD : Allow multi-selection of layers; allow to show/hide or readonly several layers at once (closes #1798)
	* ADD : Also export routes in GPX
	* ADD : Paste features as a whole (closes #1807)
    * ADD : Spatial indexing of features for faster display with large downloaded areas.
    * ADD : Built-in list of epsg projections (from proj4)
    * CHG : Replaced "Commit..." command by "Force Upload". Allows to force update of existing features or to upload imported features (such as SHP, KML, ...)
    * FIX : User preferences thru OSM preferences system works again
	* FIX : Support projections when importing SHP files
	* ADD : Drag & drop re-ordering of the layers
	* ADD : Support for multiple image layers (closes #1400)
	* CHG : Load Yahoo background as a whole rather than in pseudo-tile
	* FIX : Take layer tag into account for drawing priority (fixes #1792)
	* FIX : Relations were no more drawn according to style
    * ADD : Interactions help in the info dock
    * ADD : Generic polygons creation (closes #1808)
    * FIX : Never loose selection when ctrl- or shift-clicking (fixes #1793)
    * FIX : Allow move of multiple selected features
    * ADD : Rotate function
    * FIX : Give title to progress dialogs (fixes #1512)
    * ADD : WMS Editor: Display user-friendly layers/projection list based on capabilities