@@ -16,4 +16,7 @@ SOURCES += MDockAncestor.cpp \
     FeaturesDock.cpp
 FORMS += DirtyDock.ui \
     StyleDock.ui \
+    MinimumRelationProperties.ui \
+    MinimumTrackPointProperties.ui \
+    MinimumRoadProperties.ui \
     FeaturesDock.ui
